@@ -29,6 +29,61 @@
 #include <string.h>
 #include <iso646.h>
 
+#define avt_max3(a,b,c) \
+  ((a) > (b) ? ((a) > (c) ? (a) : (c)) : (b) > (c) ? (b) : (c))
+
+// returns the maximum color value (red, green or blue)
+extern int
+avt_brightness (avt_color color)
+{
+  avt_color red, green, blue;
+
+  red = (color >> 16) bitand 0xFF;
+  green = (color >> 8) bitand 0xFF;
+  blue = color bitand 0xFF;
+
+  return avt_max3 (red, green, blue);
+}
+
+
+extern inline avt_color
+avt_darker (avt_color color, int amount)
+{
+  register int r, g, b;
+
+  r = (color >> 16) & 0xFF;
+  g = (color >> 8) & 0xFF;
+  b = color & 0xFF;
+
+  r = r > amount ? r - amount : 0;
+  g = g > amount ? g - amount : 0;
+  b = b > amount ? b - amount : 0;
+
+  return (r << 16) | (g << 8) | b;
+}
+
+/* return a brighter color */
+extern inline avt_color
+avt_brighter (avt_color color, int amount)
+{
+  register int r, g, b;
+
+  r = ((color >> 16) & 0xFF) + amount;
+  g = ((color >> 8) & 0xFF) + amount;
+  b = (color & 0xFF) + amount;
+
+  if (r > 0xFF)
+    r = 0xFF;
+
+  if (g > 0xFF)
+    g = 0xFF;
+
+  if (b > 0xFF)
+    b = 0xFF;
+
+  return (r << 16) | (g << 8) | b;
+}
+
 extern void
 avt_free_graphic (avt_graphic * gr)
 {
@@ -401,5 +456,43 @@ avt_darker_area (avt_graphic * gr, int x, int y, int width, int height,
 
       for (int dx = width - 1; dx >= 0; dx--, p++)
 	*p = avt_darker (*p, amount);
+    }
+}
+
+// secure
+extern void
+avt_brighter_area (avt_graphic * gr, int x, int y, int width, int height,
+		   int amount)
+{
+  if (x > gr->width or y > gr->height)
+    return;
+
+  if (x < 0)
+    {
+      width -= (-x);
+      x = 0;
+    }
+
+  if (y < 0)
+    {
+      height -= (-y);
+      y = 0;
+    }
+
+  if (x + width > gr->width)
+    width = gr->width - x;
+
+  if (y + height > gr->height)
+    height = gr->height - y;
+
+  if (width <= 0 or height <= 0)
+    return;
+
+  for (int dy = height - 1; dy >= 0; dy--)
+    {
+      avt_color *p = avt_pixel (gr, x, y + dy);
+
+      for (int dx = width - 1; dx >= 0; dx--, p++)
+	*p = avt_brighter (*p, amount);
     }
 }
